--- a/students/templates/students/index.html
+++ b/students/templates/students/index.html
@@ -67,6 +67,10 @@
                             </div>
                           </div>
 
+                          <a href="{% url 'edit' student.id %}" class="btn btn-warning me-1">
+                            <i class="fa-solid fa-pen-to-square fa-lg"></i>
+                          </a>
+
                         </td>
                       </tr>
                     {% endfor %}
